<resources>
    <string name="album_name">Album Name</string>
    <string name="albumItem">Album</string>
    <string name="albums">Albums</string>
    <string name="albums_activity_description">This activity will show a list of albums in the music library. Tapping an album will go to the Now Playing activity.</string>
    <string name="app_name">MusicApp</string>
    <string name="artist_name">Artist Name</string>
    <string name="artistItem">Artist</string>
    <string name="artists">Artists</string>
    <string name="artists_activity_description">This activity will show a list of artists in the music library. Tapping an artist will go to the Now Playing activity.</string>
    <string name="endTime">03:45</string>
    <string name="main_activity_description">In the main activity, a list of options is shown and each option can be tapped to go to that activity.\nMedia will be populated from the device using the ContentResolver Class (https://developer.android.com/reference/android/content/ContentResolver.html)</string>
    <string name="main_screen">Main screen</string>
    <string name="next">Next</string>
    <string name="now_playing">Now playing…</string>
    <string name="nowplaying_activity_description">The Now Playing activity will show detailed information about the item currently played, as well as controls to play, pause, etc.\nThe Android MediaPlayer Class (https://developer.android.com/reference/android/media/MediaPlayer.html) will be used to play songs.</string>
    <string name="other_info">Other info</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="playlistItem">Playlist</string>
    <string name="playlists">Playlists</string>
    <string name="playlists_activity_description">This activity will show a list of playlists in the music library. Tapping a playlist will go to the Now Playing activity.</string>
    <string name="podcastItem">Podcast</string>
    <string name="podcasts">Podcasts</string>
    <string name="podcasts_activity_description">This activity will show a list of podcasts in the music library. Tapping a podcast will go to the Now Playing activity.</string>
    <string name="previous">Previous</string>
    <string name="resultItem1">Result Item 1</string>
    <string name="resultItem2">Result Item 2</string>
    <string name="resultItem3">Result Item 3</string>
    <string name="resultItem4">Result Item 4</string>
    <string name="results_activity_description">The search results will be shown in this activity. Tapping on a result will go to the Now Playing activity</string>
    <string name="search">Search</string>
    <string name="search_activity_description">This activity will show a pane with fields to enter criteria for album, artist, track name, etc. The results will be shown in the results activity.</string>
    <string name="startTime">00:00</string>
    <string name="stop">Stop</string>
    <string name="title_activity_results">Found tracks</string>
    <string name="track_name">Track Name</string>
    <string name="trackItem">Track</string>
</resources>
