<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lorenzo.musicapp.SearchActivity">

    <TextView
        android:id="@+id/search_descr_textview"
        style="@style/ActivityDescriptionStyle"
        android:text="@string/search_activity_description" />

    <EditText
        android:id="@+id/track_field"
        style="@style/TextInput"
        android:hint="@string/trackItem"
        android:inputType="text" />

    <EditText
        android:id="@+id/artist_field"
        style="@style/TextInput"
        android:hint="@string/artistItem"
        android:inputType="text" />

    <EditText
        android:id="@+id/album_field"
        style="@style/TextInput"
        android:hint="@string/albumItem"
        android:inputType="text" />

    <EditText
        android:id="@+id/playlist_field"
        style="@style/TextInput"
        android:hint="@string/playlistItem"
        android:inputType="text" />

    <EditText
        android:id="@+id/podcast_field"
        style="@style/TextInput"
        android:hint="@string/podcastItem"
        android:inputType="text" />

    <Button
        android:id="@+id/button_search"
        style="@style/ButtonStyle"
        android:text="@string/search" />

    <Button
        android:id="@+id/button_goto_main"
        style="@style/ButtonStyle"
        android:text="@string/main_screen" />

</LinearLayout>
