<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nowplaying"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.lorenzo.musicapp.NowPlayingActivity">

    <TextView
        android:id="@+id/nowplaying_descr_textview"
        style="@style/ActivityDescriptionStyle"
        android:text="@string/nowplaying_activity_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/DetailedInfoStyle"
            android:text="@string/track_name" />

        <TextView
            style="@style/DetailedInfoStyle"
            android:text="@string/album_name" />

        <TextView
            style="@style/DetailedInfoStyle"
            android:text="@string/artist_name" />

        <TextView
            style="@style/DetailedInfoStyle"
            android:text="@string/other_info" />

    </LinearLayout>

    <LinearLayout
        style="@style/SeekBarContainerStyle"
        android:orientation="horizontal">

        <TextView
            style="@style/SeekBarTimeStyle"
            android:text="@string/startTime" />

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/SeekBarStyle" />

        <TextView
            style="@style/SeekBarTimeStyle"
            android:text="@string/endTime" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_bar_height"
        android:background="#EEEEEE"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_prev"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_skip_previous_black_24dp" />

        <ImageButton
            android:id="@+id/button_pause"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pause"
            android:src="@drawable/ic_pause_black_24dp" />

        <ImageButton
            android:id="@+id/button_play"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play_arrow_black_24dp" />

        <ImageButton
            android:id="@+id/button_stop"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/stop"
            android:src="@drawable/ic_stop_black_24dp" />

        <ImageButton
            android:id="@+id/button_next"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_skip_next_black_24dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_goto_main"
        style="@style/ButtonStyle.Home"
        android:text="@string/main_screen" />

</LinearLayout>
