<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.lorenzo.musicapp.ResultsActivity">

    <TextView
        android:id="@+id/results_descr_textView"
        style="@style/ActivityDescriptionStyle"
        android:text="@string/results_activity_description" />

    <TextView
        android:id="@+id/result1_textView"
        style="@style/ResultsStyle"
        android:text="@string/resultItem1" />

    <TextView
        android:id="@+id/result2_textView"
        style="@style/ResultsStyle"
        android:text="@string/resultItem2" />

    <TextView
        android:id="@+id/result3_textView"
        style="@style/ResultsStyle"
        android:text="@string/resultItem3" />

    <TextView
        android:id="@+id/result4_textView"
        style="@style/ResultsStyle"
        android:text="@string/resultItem4" />

    <Button
        android:id="@+id/button_goto_main"
        style="@style/ButtonStyle.Home"
        android:text="@string/main_screen" />

</LinearLayout>
