<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_playlists"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lorenzo.musicapp.PlaylistsActivity">

    <TextView
        android:id="@+id/playlists_descr_textview"
        style="@style/ActivityDescriptionStyle"
        android:text="@string/playlists_activity_description" />

    <TextView
        android:id="@+id/playlist_textview"
        style="@style/ResultsStyle"
        android:text="@string/playlistItem" />

    <Button
        android:id="@+id/button_goto_main"
        style="@style/ButtonStyle"
        android:text="@string/main_screen" />

</LinearLayout>
