<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_albums"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.lorenzo.musicapp.AlbumsActivity">

    <TextView
        android:id="@+id/albums_descr_textView"
        style="@style/ActivityDescriptionStyle"
        android:text="@string/albums_activity_description" />

    <TextView
        android:id="@+id/album_textView"
        style="@style/ResultsStyle"
        android:text="@string/albumItem" />

    <Button
        android:id="@+id/button_goto_main"
        style="@style/ButtonStyle.Home"
        android:text="@string/main_screen" />

</LinearLayout>
